# LitePolis-router-particiapi

./: .gitignore  README.md  conftest.py  database.db  pyproject.toml
litepolis_router_particiapi/: __init__.py  core.py
tests/: test_particiapi.py
