[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "litepolis-router-particiapi"
version = "0.1.0"
description = "LitePolis router module implementing ParticiAPI specification"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "LitePolis Team"}
]
dependencies = [
    "fastapi>=0.100.0",
    "pydantic>=2.0.0",
    "litepolis-database-default",
    "litepolis-database-particiapi",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "httpx>=0.24.0",
]

[tool.hatch.build.targets.wheel]
packages = ["litepolis_router_particiapi"]
